--- a/index.html
+++ b/index.html
@@ -1,141 +1,190 @@
 <!doctype html>
 
+
 <html lang="en">
 
+
 <head>
-	<meta charset="utf-8">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/index.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sprint Challenge - Home</title>
 
-	<title>Sprint Challenge - Home</title>
 
-	<link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
-	<script src="https://kit.fontawesome.com/5b12ffad4b.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/5b12ffad4b.js" crossorigin="anonymous"></script>
 </head>
 
+
 <body>
-	<div>
-		<!-- header -->
-		<header>
-			<div>
-				BLOOMTECH BAR AND GRILL
+    <div>
+        <!-- header -->
+        <header>
+            <div>
+                <h1><a href="index.html">BLOOMTECH BAR AND GRILL</a></h1>
+               
+                <!-- nav -->
+                <nav class="links">
+                    <div>
+                        <a href="menu.html">Menu</a>
+                        <a href="#reservations">Reservations</a>
+                        <a href="#specialoffers">Special Offers</a>
+                        <a href="#contact">Contact</a>
+                    </div>
+                    <div class="logos">
+                        <i class="facebook"></i>
+                        <i class="instagram"></i>
+                        <i class="twitter"></i>
+                    </div>
+                </nav>
+            </div>
+        </header>
 
-				<!-- nav -->
-				Menu
-				Reservations
-				Special Offers
-				Contact
-			</div>
-		</header>
 
-		<!-- gallery section -->
-		<section class="gallery">
-			<div>
-				<h2>OUR FOOD</h2>
+        <!-- gallery section -->
+        <section class="gallery">
+            <div>
+                <h2>OUR FOOD</h2>
 
-				img/food-avocadotoast.jpg
 
-				img/food-burger.jpg
+                <img src="img/food-avocadotoast.jpg" alt="avocado toast">
 
-				img/food-poutine.jpg
 
-				img/food-ribs.jpg
+                <img src="img/food-burger.jpg" alt="burger">
 
-				img/food-sandwich.jpg
 
-				img/food-sausage.jpg
+                <img src="img/food-poutine.jpg" alt="poutine">
 
-				img/food-steak.jpg
 
-				img/food-tacos.jpg
+                <img src="img/food-ribs.jpg" alt="ribs">
 
-				img/food-wings.jpg
-			</div>
-		</section>
 
-		<!-- spacer -->
-		<div class="spacer"></div>
+                <img src="img/food-sandwich.jpg" alt="sandwich">
 
-		<!-- about section -->
-		<section class="about">
-			<div class="about-container">
-				<h2>ABOUT US</h2>
 
-				<div id="cooks" class="pic">
-				</div>
+                <img src="img/food-sausage.jpg" alt="sausage">
 
-				<div class="text">
-					<h3>Good Food, Great People</h3>
-					<p>Quis duis aute, shank ut pork eiusmod in ball tip jerky non. Short ribs tail dolore, fatback in
-						tempor meatloaf pig sunt porchetta beef. Ad hamburger pig veniam, andouille exercitation cillum
-						eiusmod doner irure tail burgdoggen rump chislic officia. Pancetta frankfurter sed, est t-bone
-						porchetta capicola id tri-tip cillum cow leberkas do minim. Sausage ea velit boudin laboris
-						dolore
-						short loin corned beef commodo jowl beef dolor tempor. Dolor culpa enim in meatloaf, ham mollit
-						shankle duis chicken dolore andouille do tenderloin qui.</p>
-				</div>
 
-				<div id="bartender" class="pic">
-				</div>
-			</div>
-		</section>
+                <img src="img/food-steak.jpg" alt="steak">
 
-		<!-- spacer -->
-		<div class="spacer"></div>
 
-		<!-- contact section -->
-		<section class="contact">
-			<div class="contact-container">
-				<h2>CONTACT US</h2>
+                <img src="img/food-tacos.jpg" alt="tacos">
 
-				<div class="info">
-					<div class="address">
-						<h3>Address</h3>
 
-						<address>
-							<p>100 Main St</p>
-							<p>San Francisco, CA</p>
-						</address>
-					</div>
+                <img src="img/food-wings.jpg" alt="wings">
+            </div>
+        </section>
 
-					<div class="hours">
-						<h3>Hours</h3>
 
-						<div>
-							<p>Sunday to Thursday:</p>
-							<p>12:00p - 12:00a</p>
-							<p>Friday and Saturday:</p>
-							<p>12:00p - 4:00a</p>
-						</div>
-					</div>
+        <!-- spacer -->
+        <div class="spacer"></div>
 
-					<div class="contacts">
-						<h3>Contacts</h3>
 
-						<div>
-							<a id="phone" href="tel:999-999-9999">999-999-9999</a>
-							<a id="email" href="mailto:restaurant@bloomtech.com">restaurant@bloomtech.com</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
+        <!-- about section -->
+        <section class="about">
+            <div class="about-container">
+                <h2>ABOUT US</h2>
 
-		<!-- spacer -->
-		<div class="spacer-sm"></div>
 
-		<!-- footer -->
-		<footer>
-			<!-- email signup -->
-			Join our mailing list!
-			Sign Up
-			<!-- nav -->
-			Menu
-			Reservations
-			Special Offers
-			Contact
-			<!-- copyright -->
-			©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
-		</footer>
-	</div>
+                <div id="cooks" class="pic">
+                </div>
+
+
+                <div class="text">
+                    <h3>Good Food, Great People</h3>
+                    <p>Quis duis aute, shank ut pork eiusmod in ball tip jerky non. Short ribs tail dolore, fatback in
+                        tempor meatloaf pig sunt porchetta beef. Ad hamburger pig veniam, andouille exercitation cillum
+                        eiusmod doner irure tail burgdoggen rump chislic officia. Pancetta frankfurter sed, est t-bone
+                        porchetta capicola id tri-tip cillum cow leberkas do minim. Sausage ea velit boudin laboris
+                        dolore
+                        short loin corned beef commodo jowl beef dolor tempor. Dolor culpa enim in meatloaf, ham mollit
+                        shankle duis chicken dolore andouille do tenderloin qui.</p>
+                </div>
+
+
+                <div id="bartender" class="pic">
+                </div>
+            </div>
+        </section>
+
+
+        <!-- spacer -->
+        <div class="spacer"></div>
+
+
+        <!-- contact section -->
+        <section class="contact">
+            <div class="contact-container">
+                <h2>CONTACT US</h2>
+
+
+                <div class="info">
+                    <div class="address">
+                        <h3>Address</h3>
+
+
+                        <address>
+                            <p>100 Main St</p>
+                            <p>San Francisco, CA</p>
+                        </address>
+                    </div>
+
+
+                    <div class="hours">
+                        <h3>Hours</h3>
+
+
+                        <div>
+                            <p>Sunday to Thursday:</p>
+                            <p>12:00p - 12:00a</p>
+                            <p>Friday and Saturday:</p>
+                            <p>12:00p - 4:00a</p>
+                        </div>
+                    </div>
+
+
+                    <div class="contacts">
+                        <h3>Contacts</h3>
+
+
+                        <div>
+                            <a id="phone" href="tel:999-999-9999">999-999-9999</a>
+                            <a id="email" href="mailto:restaurant@bloomtech.com">restaurant@bloomtech.com</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- spacer -->
+        <div class="spacer-sm"></div>
+
+
+        <!-- footer -->
+        <footer>
+            <!-- email signup -->
+            <div class="email">
+                <form>
+                    <label for="email">Join our mailing list!</label>
+                    <input type="email" id="email" name="email" placeholder="Email Address">
+                    <button type="submit">Sign Up</button>
+                </form>
+            </div>
+            <!-- nav -->
+            <nav class="links">
+                <a href="menu.html">Menu</a>
+                <a href="#reservations">Reservations</a>
+                <a href="#specialoffers">Special Offers</a>
+                <a href="#contact">Contact</a>
+            </nav>
+            <!-- copyright -->
+            <div class="copyright">
+                <p>©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.</p>
+            </div>
+        </footer>
+    </div>
 </body>
+
 
 </html>
